# CompartmentalNeuronGUI

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  c_elegans_vis_test.py  mcp.json  mkdocs.yml  neuronswctest.py  opencode.json  pyproject.toml  requirements.txt  serverclient_vis_test.py  test.py  visualizer.py
.codex/: config.toml
.compneurovis/pr-readiness/: README.md
.gemini/: settings.json
.github/: pull_request_template.md
.github/workflows/: docs-pages.yml  pr-readiness.yml
docs/: getting-started.md  index.md
docs/api/: backends.md  builders.md  index.md  public-api.md
docs/architecture/: core-model.md  docs-vocabulary.json  index.md  invariants.json  pr-readiness-attestation.md  refactor-tracker.md  release-process.md  runtime-architecture-map.md  session-protocol.md  vispy-frontend.md
docs/concepts/: controls-actions-state.md  field-model.md  geometry-types.md  index.md  session-update-model.md  (+1 more)
examples/: lfp_csd_surface_visualizer.py  static_surface_visualizer.py  surface_cross_section_visualizer.py  visualizer.py  visualizer_neuron.py
experiments/: c_elegans_vis_experiment.py  jaxley_celegans_experiment.py  jaxley_multicell_param_sweep.py  neuron_swc_experiment.py  visualizer_new.py
res/: Animal_2_Basal_2.CNG.swc  Series006ok-2.CNG.swc  m3s4s4t-vp-sup.CNG.swc
scratch/: README.md  hh_attach.py  hh_competing_ligand_effector_chain_exploration.py  hh_competing_ligand_parameter_modulation_exploration.py  hh_inline.py  hh_jaxley_attach.py  hh_jaxley_notebook.ipynb  hh_neuron_attach.py  hh_neuron_inline.py  hh_neuron_notebook.ipynb  jaxley_hh_sweep.py  jaxley_hh_validate.py  jaxley_multicell_param_sweep.py  jaxley_param_sweep.py  lif_cnv.py  lif_inline.py  perf_stats.txt  signaling_cascade_chain_exploration.py  sine_wave.py  sine_wave_cnv.py  sine_wave_controls.py  sine_wave_inline.py  source_organization_review.md  test_ctrlc_p1_subprocess_join.py  test_ctrlc_p2_vispy_sigint.py  test_ctrlc_p3_wait_hang.py  test_p1_qapp_gc.py  test_p2_subprocess_use.py  test_p3_pipe_lifetime.py  vispy_graph_exploration.py
scripts/: check_architecture_invariants.py  check_docs_vocabulary.py  check_packaging_metadata.py  generate_indexes.py  generate_mcp_configs.py  mkdocs_hooks.py  pr_readiness.py
tests/: conftest.py  test_app_spec.py  test_core_bindings.py  test_docs_and_indexes.py  test_docs_vocabulary.py  test_field.py  test_frontend_bindings.py  test_generate_mcp_configs.py  test_geometry.py  test_jaxley_backend.py  test_jaxley_document.py  test_jaxley_scene.py  test_layout_updates.py  test_messages.py  test_neuron_backend.py  test_packaging_metadata.py  test_perf_logging.py  test_pipe_transport.py  test_pr_readiness.py  test_replay_builder.py  visualizer_singlethread_test.py
(+211 files in other folders)
