[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name        = "compneurovis"
version     = "0.2.0"
description = "A VisPy/PyQt6 GUI for compartmental neuron visualization"
authors     = ["Orren Ravid"]
readme      = "README.md"
license     = "Apache-2.0"
packages    = [
  { include = "compneurovis", from = "src" }
]

[tool.poetry.dependencies]
python        = "^3.11"
numpy         = ">=1.20"
PyOpenGL      = "3.1.10"
PyQt6         = "6.9.1"
pyqtgraph     = "0.13.7"
scipy         = "1.16.0"
vispy         = "0.15.2"

# optional simulator backends
neuron        = { version = "^8.2", optional = true }
jaxley        = { version = "^0.1", optional = true }
arbor         = { version = "^0.9", optional = true }
pymoose       = { version = "^4.1", optional = true }

# optional contributor/docs/test toolchain
pytest        = { version = "^7.0", optional = true }
mkdocs        = { version = "^1.6.1", optional = true }
mkdocs-material = { version = "^9.7.6", optional = true }
mkdocstrings  = { version = "^1.0.3", extras = ["python"], optional = true }

[tool.poetry.extras]
neuron  = ["neuron"]
jaxley  = ["jaxley"]
arbor   = ["arbor"]
moose   = ["pymoose"]
contrib = ["pytest", "mkdocs", "mkdocs-material", "mkdocstrings"]
all     = ["neuron", "jaxley", "arbor", "pymoose", "pytest", "mkdocs", "mkdocs-material", "mkdocstrings"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "jaxley: optional Jaxley backend tests and slower subprocess validation",
]
